<resources>
    <string name="app_name">Scoot Media Streamer</string>
    <string name="launcher_name">Media Streamer</string>
    <string name="media_title">Media Browser</string>
    <string name="media_retrieving_folders">Retrieving Media Folders</string>
    <string name="media_retrieving_elements">Retrieving Media</string>
    <string name="media_error_parsing_json">Error parsing result from server</string>
    <string name="media_not_found">No Media Found!</string>
    <string name="playlist_title">Playlist</string>
    <string name="playlist_empty">Playlist is empty!</string>
    <string name="action_bar_play_all">Play All</string>
    <string name="action_bar_play">Play</string>
    <string name="action_bar_stop">Stop</string>
    <string name="action_bar_add_all_and_play_next">Add All And Play Next</string>
    <string name="action_bar_add_and_play_next">Add And Play Next</string>
    <string name="action_bar_add_all_to_queue">Add All To Queue</string>
    <string name="action_bar_add_to_queue">Add To Queue</string>
    <string name="action_bar_clear">Clear</string>
    <string name="action_bar_view_playlist">Playlist</string>
    <string name="action_bar_view_now_playing">Now Playing</string>
    <string name="action_bar_add_connection">Add Connection</string>
    <string name="action_bar_save_connection">Save Connection</string>
    <string name="action_bar_edit_connection">Edit Connection</string>
    <string name="action_bar_remove_connection">Remove Connection</string>
    <string name="action_bar_media_route">Available Devices</string>
    <string name="action_bar_video_quality">Video Quality</string>
    <string name="action_bar_audio_track">Audio</string>
    <string name="action_bar_subtitle_track">Subtitles</string>
    <string name="action_bar_track_selection">Track Selection</string>
    <string name="button_more">More</string>
    <string name="audio_player_title">Now Playing</string>
    <string name="audio_player_cover_art_description">Cover Art</string>
    <string name="audio_player_next_button_description">Play next track</string>
    <string name="audio_player_previous_button_description">Play previous track</string>
    <string name="audio_player_play_pause_button_description">Play/Pause</string>
    <string name="audio_player_stop_button_description">Stop playback</string>
    <string name="audio_player_playlist_button_description">View Current Playlist</string>
    <string name="audio_player_overflow_menu_button_description">Menu</string>
    <string name="video_controller_play_button_description">Play/Pause</string>
    <string name="video_player_error">Unable to play media</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="label_play_next">Play Next</string>
    <string name="label_add_to_queue">Add To Queue</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_finish">Finish</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="label_remove">Remove</string>
    <string name="label_connect">Connect</string>
    <string name="label_shuffle">Shuffle</string>
    <string name="navigation_drawer_title">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_item_home">Home</string>
    <string name="navigation_drawer_item_music">Music</string>
    <string name="navigation_drawer_item_video">Video</string>
    <string name="navigation_drawer_item_settings">Settings</string>
    <string name="connections_title">Connections</string>
    <string name="connections_edit_title">Edit Connection</string>
    <string name="connections_add_title">New Connection</string>
    <string name="connections_action_mode_title">Options</string>
    <string name="connections_name">Name</string>
    <string name="connections_name_dialog">Enter Connection Name</string>
    <string name="connections_url">Server Address</string>
    <string name="connections_url_dialog">Enter Server Address</string>
    <string name="connections_username">Username</string>
    <string name="connections_username_dialog">Enter Username</string>
    <string name="connections_password">Password</string>
    <string name="connections_password_dialog">Enter Password</string>
    <string name="connections_password_set">Password is set.</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_title_audio">Audio Settings</string>
    <string name="preferences_title_video">Video Settings</string>
    <string name="preferences_title_transcode">Transcode Settings</string>
    <string name="preferences_title_audio_quality">Audio Quality</string>
    <string name="preferences_title_video_quality">Video Quality</string>
    <string name="preferences_title_replaygain">ReplayGain</string>
    <string name="preferences_title_audio_multichannel">Enable Audio Passthrough</string>
    <string name="preferences_title_direct_play">Enable Direct Play</string>
    <string name="preferences_summary_audio_quality">Select the audio quality to use during audio playback.</string>
    <string name="preferences_summary_video_quality">Select the video quality to use during video playback.</string>
    <string name="preferences_summary_replaygain">Select ReplayGain volume normalisation operating mode.</string>
    <string name="preferences_summary_direct_play">Enable direct streaming of media on the local network.</string>
    <string name="preferences_summary_cast_audio_quality">Select the audio quality to use when casting.</string>
    <string name="preferences_summary_cast_video_quality">Select the video quality to use when casting.</string>
    <string name="preferences_summary_cast_replaygain">Select ReplayGain volume normalisation operating mode when casting.</string>
    <string name="preferences_title_connections">Connections</string>
    <string name="preferences_title_manage_connections">Manage Connections</string>
    <string name="preferences_title_streaming_setting">Streaming</string>
    <string name="preferences_title_casting_setting">Casting</string>
    <string name="preferences_summary_connections">Add and manage SMS server connections.</string>
    <string name="preferences_default_audio_quality_value">1</string>
    <string name="preferences_default_video_quality_value">1</string>
    <string name="preferences_default_cast_audio_quality_value">2</string>
    <string name="preferences_default_cast_video_quality_value">5</string>
    <string name="preferences_default_replaygain_value">0</string>
    <string name="play_error_message">Impossible to play the video.</string>
    <string name="play_progressive_error_message">Impossible to play the progressive video.</string>
    <string name="button_retry">Retry</string>
    <string name="cast_application_id">0F717E79</string>
    <string name="cast_application_id_dev">EE643842</string>
    <string name="cast_to_device">Casting to %1$s</string>
    <string name="cast_stop">Stop Casting</string>
    <string name="cast_first_time_ux">Touch to connect to a Google Cast device</string>
    <string name="description_currently_playing">Media currently playing</string>
    <string name="description_currently_playing_title">Title of media currently playing</string>
    <string name="description_currently_playing_subtitle">Subtitle of media currently playing</string>
    <string name="description_currently_playing_extra_info">Additional information for media currently playing</string>
    <string name="description_play_item">Play item</string>
    <string name="description_play_pause">Play/Pause</string>
    <string name="description_skip_next">Skip to next</string>
    <string name="description_skip_prev">Skip to previous</string>
    <string name="description_shuffle_playlist">Shuffle Playlist</string>
    <string name="description_shuffle_on">Shuffle Mode On</string>
    <string name="description_shuffle_off">Shuffle Mode Off</string>
    <string name="description_repeat">Repeat Playlist</string>
    <string name="description_repeat_none">Disable Repeat Mode</string>
    <string name="description_repeat_all">Repeat All</string>
    <string name="description_repeat_one">Repeat One</string>
    <string name="description_background_image">Background image for cover art</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="heading_music">Music</string>
    <string name="heading_video">Video</string>
    <string name="heading_settings">Settings</string>
    <string name="heading_now_playing">Now Playing</string>
    <string name="heading_media_browser">Media Browser</string>
    <string name="heading_recently_added">Recently Added</string>
    <string name="heading_recently_played">Recently Played</string>
    <string name="heading_artists">Artists</string>
    <string name="heading_album_artists">Album Artists</string>
    <string name="heading_albums">Albums</string>
    <string name="heading_collections">Collections</string>
    <string name="heading_home">Home</string>
    <string name="heading_tracklist">Tracklist</string>
    <string name="heading_queue">Queue</string>
    <string name="heading_playlists">Playlists</string>
    <string name="heading_track_selection">Track Selection</string>
    <string name="heading_contents">Contents</string>
    <string name="error_media_playback">Unable to play media</string>
    <string name="error_server">Operation failed with status code: </string>
    <string name="error_server_not_found">Unable to contact server</string>
    <string name="error_unauthenticated">Username or Password is incorrect</string>
    <string name="error_parsing_media">Unable to parse media list</string>
    <string name="error_loading_media">Unable to load media</string>
    <string name="error_media_unavailable">No media found</string>
    <string name="error_unsupported_server_version">Server version unsupported</string>
    <string name="error_check_connection">Check your connection and try again.</string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="error_search_not_implemented">The search feature is not yet implemented</string>
    <string name="error_fetching_media_folders">Failed to fetch list of media folders</string>
    <string name="error_fetching_recently_added">Failed to fetch recently added media</string>
    <string name="error_fetching_recently_played">Failed to fetch recently played media</string>
    <string name="error_unable_to_cast_video">Cast device does not support video</string>
    <string name="notification_please_wait">Please Wait&#8230;</string>
    <string name="notification_audio_directory_play_next">Album added next in play queue</string>
    <string name="notification_audio_directory_add_to_queue">Album added to play queue</string>
    <string name="connections_url_default">http://</string>
    <string name="connections_testing">Test Connection</string>
    <string name="connections_no_name">Enter a name</string>
    <string name="connections_no_username">Enter a username</string>
    <string name="connections_no_password">Enter a password</string>
    <string name="connections_invalid_url">Enter a valid server address</string>
    <string name="connections_empty">No connections have been added&#8230;</string>
    <string name="media_folder_subtitle">%1$d Files %2$d Directories</string>
</resources>