<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/audio_player_small_fragment_height"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="48dip"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/cover_art_frame"
            android:layout_width="48dip"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dip">

            <ImageView
                android:id="@+id/cover_art"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:contentDescription="@string/audio_player_cover_art_description"
                android:scaleType="fitCenter"
                android:src="@drawable/cover_art" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="24dip"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/cover_art_frame"
            android:ellipsize="marquee"
            android:gravity="bottom"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="fill_parent"
            android:layout_height="24dip"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/cover_art_frame"
            android:ellipsize="marquee"
            android:gravity="top"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textIsSelectable="false"
            android:textSize="12sp" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/previous"
        style="@style/AudioPlayerSmallButton"
        android:contentDescription="@string/audio_player_previous_button_description"
        android:src="@drawable/ic_action_previous" />

    <ImageButton
        android:id="@+id/play_pause"
        style="@style/AudioPlayerSmallButton"
        android:contentDescription="@string/audio_player_play_pause_button_description"
        android:src="@drawable/ic_action_play_dark" />

    <ImageButton
        android:id="@+id/next"
        style="@style/AudioPlayerSmallButton"
        android:contentDescription="@string/audio_player_next_button_description"
        android:src="@drawable/ic_action_next" />

</LinearLayout>