<?xml version="1.0" encoding="utf-8"?>
<!--
    Author: Scott Ware <scoot.software@gmail.com>
    Copyright (c) 2015 Scott Ware

    Permission is hereby granted, free of charge, to any person obtaining
    a copy of this software and associated documentation files (the
    "Software"), to deal in the Software without restriction, including
    without limitation the rights to use, copy, modify, merge, publish,
    distribute, sublicense, and/or sell copies of the Software, and to
    permit persons to whom the Software is furnished to do so, subject to
    the following conditions:

    The above copyright notice and this permission notice shall be
    included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
    EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
    MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
    NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
    LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
    OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
    WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/playback_controls_padding">
    <ImageView
        android:id="@+id/cover_art"
        tools:src="@drawable/ic_not_interested_black_24dp"
        android:layout_width="@dimen/playback_controls_coverart_size"
        android:layout_height="@dimen/playback_controls_coverart_size"
        android:scaleType="centerCrop"
        android:contentDescription="@string/description_currently_playing"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/playback_controls_coverart_horizontal_margin"
        android:orientation="vertical"
        android:layout_toEndOf="@id/cover_art"
        android:layout_toStartOf="@+id/play_pause"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/title"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_currently_playing_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:id="@+id/subtitle"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_currently_playing_subtitle"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView
            android:id="@+id/extra_info"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:contentDescription="@string/description_currently_playing_extra_info"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/play_pause"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignParentEnd="true"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_play_arrow_black_36dp"
        android:contentDescription="@string/description_play_pause"/>
</RelativeLayout>